@@ -1,16 +1,0 @@
-/* main.h: global variable declarations. */
-
-#ifndef MAIN_H
-#define MAIN_H
-
-#include "types.h"
-#include "image-header.h"
-
-
-/* See main.c for explanations of these globals.  */
-extern bool trace_scanlines;
-extern string input_name;
-
-#endif /* not MAIN_H */
-
-/* version 0.23 */
